--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@
 #
 
 # Name of your site (displayed in the header)
-name: Cruft City Express ⚙
+name: Cruft City Express
+description: ⚙ ⚙ ⚙
 
 # Short bio or description (displayed in the header)
 # description: Web Developer from Somewhere
